mapping refactoring